--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ Django==2.2.24
 django-debug-toolbar==3.2.4
 django-debug-toolbar-template-profiler==2.0.2
 django-extensions==3.1.5
-graphviz==0.19.1
 gunicorn==20.1.0
 idna==3.3
 isort==5.10.0
@@ -18,17 +17,18 @@ oauthlib==3.1.1
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
-psycopg2-binary==2.9.2
+psycopg2-binary==2.8.4
 pycparser==2.21
 pydotplus==2.0.2
-pygraphviz==1.7
 PyJWT==2.3.0
 pyparsing==3.0.6
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2021.3
 regex==2021.11.2
 requests==2.26.0
 requests-oauthlib==1.3.0
+six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.2
