--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==2.2.24
 django-debug-toolbar==3.2.4
 django-debug-toolbar-template-profiler==2.0.2
 django-extensions==3.1.5
+graphviz==0.19.1
 gunicorn==20.1.0
 idna==3.3
 isort==5.10.0
@@ -17,9 +18,10 @@ oauthlib==3.1.1
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
-psycopg2-binary==2.8.4
+psycopg2-binary==2.9.2
 pycparser==2.21
 pydotplus==2.0.2
+pygraphviz==1.7
 PyJWT==2.3.0
 pyparsing==3.0.6
 python-memcached==1.59
